docs/versions/4.22/groups/M17.md
---
layout: group
group_id: M17
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Audits execution of privileged commands (setuid/setgid binaries) including su, sudo, mount, passwd, and other security-sensitive executables. Tracks privilege escalation and administrative actions.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `at` | Audit at command execution |
| `chage` | Audit password aging changes |
| `chsh` | Audit shell changes |
| `crontab` | Audit crontab modifications |
| `gpasswd` | Audit group password changes |
| `mount` | Audit mount operations |
| `newgidmap` | Audit GID map changes |
| `newgrp` | Audit group membership changes |
| `newuidmap` | Audit UID map changes |
| `pam-timestamp-check` | Audit PAM timestamp checks |
| `passwd` | Audit password changes |
| `postdrop` | Audit postfix mail drop |
| `postqueue` | Audit postfix mail queue |
| `pt-chown` | Audit pseudo-terminal ownership |
| `ssh-keysign` | Audit SSH key signing |
| `su` | Audit su command execution |
| `sudo` | Audit sudo command execution |
| `sudoedit` | Audit sudoedit execution |
| `umount` | Audit unmount operations |
| `unix-chkpwd` | Audit password verification |
| `userhelper` | Audit userhelper execution |
| `usernetctl` | Audit network control changes |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -c privileged
```
